 * campaigns
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
 * graphics
   * fixed terrain selection probabilites (patch #617)
 * multiplayer maps:
   * new multiplayer maps: The Manzivan Traps
 * units:
   * balancing changes:
     * decreased cost of the Mudcrawler from 9 to 5
     * Dark Adepts no longer get the 'strong' trait
   * new traits
     * healthy (+3HP, +4 rest healing), fearless (ignore unfavorable ToD)
   * new units
     * added the Armageddon Drake (not used in any mainline eras)
   * unit art
     * added a recruit animation for Skeleton
 * user interface
   * use "Save Replay" instead of "Save Game" when asking to save a replay (bug #7256)
   * fix ennemi Gold show twice in debug mode in status table (bug #6895)
   * added an option to hide minimaps in the multiplayer lobby
   * added menu items for saving the current map
   * added turbo speed setting and changed ui accordingly
   * turn bell moved to sound tab in preferences
   * new volume slider for the turn bell
   * disabled inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard (left and right arrow)
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * when sighting friendly units, the message is now blue
   * show leader name in statistics title (patch #604, FR #6932)
   * initial support for GP2X controls
   * show leader's name and colour at status table even when that team is fogged
     (patch #605)
 * WML engine
   * added prerecruit event that takes place after the unit is created but before it is displayed.