@@ -10,6 +10,8 @@ Version 1.3-svn:
       secured (fixes #7360)
  * graphics
    * fixed terrain selection probabilites (patch #617)
+   * stoned units do not use a separate cache
+   * no more "darkened" cache. we now overlay terrain/darken.png
  * multiplayer maps:
    * new multiplayer maps: The Manzivan Traps
  * units:
